wildlife-blog: changed directory

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <small>― Mehmet Murat ildan</small>
                 </div>
             </div>
-            <img class="elephant-img" src="/assets/walking-elephant.gif" alt="">
+            <img class="elephant-img" src="./assets/walking-elephant.gif" alt="">
         </section>
         
         <section id="goal">
